--- a/css/base.css
+++ b/css/base.css
@@ -8,3 +8,4 @@ h1 { color: #fff; }
 .nav { padding-bottom: 18px; }
 .nav a { border-radius: 10px; padding: 7px 30px; color: #fff; border-style: solid; text-decoration: none; display: inline-block; }
 .nav a:hover { color: #f2ed02; border-color: #f2ed02; }
+.urlList { position: absolute; left: -15000px; }
